@@ -9,6 +9,9 @@
    - stevesk@cvs.openbsd.org 2001/07/15 16:57:21
      [ssh-agent.1]
      -d will not fork; ok markus@
+   - stevesk@cvs.openbsd.org 2001/07/15 16:58:29
+     [ssh-agent.c]                              
+     typo in usage; ok markus@
 
 20010715
  - (bal) Set "BROKEN_GETADDRINFO" for darwin platform.  Reported by
@@ -6048,4 +6051,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1406 2001/07/18 15:51:00 mouring Exp $
+$Id: ChangeLog,v 1.1407 2001/07/18 15:53:39 mouring Exp $
